// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`complete onboarding screens > snapshots the compact conflict consent and cancellation screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "╻  ╻┏━╸╺┳╸┏━┓┏━╸┏━╸
┃  ┃┣╸  ┃ ┃ ┃┣╸ ┣╸
┗━╸╹╹   ╹ ┗━┛╹  ╹
Initialize the project and prepare its workstation
◆: Discover project context
◆: Configure project
? Generate the single-maintainer GitFlow governance handoff? [Y/n]: ? Set up the GitHub-hosted Copilot coding agent? This writes .github/workflows/copilot-setup-steps.yml and .github/agents/openspec.agent.md. [y/N]: ◆: Review resolved plan
Resolved project plan
─────────────────────
Project                   snapshot-app
Project type              Standard application
API stack                 Go / Huma / Chi
Cloud                     Azure
Region                    East US / eastus
Frontend                  Not generated
Spec workflow             OpenSpec
Coding agents             GitHub Copilot
OpenSpec workflows        12 workflows; skills and commands
Copilot cloud agent       Disabled (default)
Repository governance     Single-maintainer GitFlow policy 6
Governance handoff Local handoff generated; live enforcement is not active
Governance setup integrations  .github/prompts/liftoff-setup.prompt.md
Governance activation Deferred until commit, push, read-only Phase 0, and
explicit plan approval
Environments              dev
Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis,
Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker
Compose, OpenTofu
Local development Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure            OpenTofu for Azure

? Initialize project? [Y/n]: i Cancelled: Initialization stopped; no destination files were changed.
",
}
`;

exports[`complete onboarding screens > snapshots the compact handled readiness failure screen 1`] = `
{
  "code": 1,
  "err": "× Error: OpenSpec: command not found
Remedy: npm install -g @fission-ai/openspec@1.11.0
× Error: Workstation readiness is incomplete.
Remedy: Resume with \`liftoff init --install-tools\` plus the same project options after reviewing the commands.
",
  "out": "╻  ╻┏━╸╺┳╸┏━┓┏━╸┏━╸
┃  ┃┣╸  ┃ ┃ ┃┣╸ ┣╸
┗━╸╹╹   ╹ ┗━┛╹  ╹
Initialize the project and prepare its workstation
◆: Discover project context
◆: Review resolved plan
Resolved project plan
─────────────────────
Project                   snapshot-app
Project type              Standard application
API stack                 Go / Huma / Chi
Cloud                     Azure
Region                    East US / eastus
Frontend                  Not generated
Spec workflow             OpenSpec
Coding agents             GitHub Copilot
OpenSpec workflows        12 workflows; skills and commands
Copilot cloud agent       Disabled (default)
Repository governance     Single-maintainer GitFlow policy 6
Governance handoff Local handoff generated; live enforcement is not active
Governance setup integrations  .github/prompts/liftoff-setup.prompt.md
Governance activation Deferred until commit, push, read-only Phase 0, and
explicit plan approval
Environments              dev
Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis,
Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker
Compose, OpenTofu
Local development Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure            OpenTofu for Azure

◆: Resolve destination
◆: Check workstation readiness
Workstation readiness
─────────────────────
Requirement     Level     State    Detail
──────────────  ────────  ───────  ─────────────────
Node.js         blocking  ready    Version 24.20.0
Go              blocking  ready    Version 1.27.0
Docker          advisory  ready    Version 27.0.0
OpenTofu        advisory  ready    Version 1.12.6
Azure CLI       advisory  ready    Version 2.70.0
OpenSpec        blocking  missing  command not found
GitHub Copilot  blocking  ready    Version 1.0.0

",
}
`;

exports[`complete onboarding screens > snapshots the compact init readiness and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "╻  ╻┏━╸╺┳╸┏━┓┏━╸┏━╸
┃  ┃┣╸  ┃ ┃ ┃┣╸ ┣╸
┗━╸╹╹   ╹ ┗━┛╹  ╹
Initialize the project and prepare its workstation
◆: Discover project context
◆: Review resolved plan
Resolved project plan
─────────────────────
Project                   snapshot-app
Project type              Standard application
API stack                 Go / Huma / Chi
Cloud                     Azure
Region                    East US / eastus
Frontend                  Not generated
Spec workflow             OpenSpec
Coding agents             GitHub Copilot
OpenSpec workflows        12 workflows; skills and commands
Copilot cloud agent       Disabled (default)
Repository governance     Single-maintainer GitFlow policy 6
Governance handoff Local handoff generated; live enforcement is not active
Governance setup integrations  .github/prompts/liftoff-setup.prompt.md
Governance activation Deferred until commit, push, read-only Phase 0, and
explicit plan approval
Environments              dev
Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis,
Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker
Compose, OpenTofu
Local development Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure            OpenTofu for Azure

◆: Resolve destination
◆: Check workstation readiness
Workstation readiness
─────────────────────
Requirement     Level     State  Detail
──────────────  ────────  ─────  ───────────────
Node.js         blocking  ready  Version 24.20.0
Go              blocking  ready  Version 1.27.0
Docker          advisory  ready  Version 27.0.0
OpenTofu        advisory  ready  Version 1.12.6
Azure CLI       advisory  ready  Version 2.70.0
OpenSpec        blocking  ready  Version 1.11.0
GitHub Copilot  blocking  ready  Version 1.0.0

◆: Check OpenSpec global profile
✓ OpenSpec global profile: custom; both; 12 workflows
◆: Stage project files
◆: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
◆: Validate staged project
◆: Merge staged project
<workspace>/snapshot-app
Configured integrations
───────────────────────
- OpenSpec 1.11.0
- GitHub Copilot
- OpenSpec global profile: verified; 12 workflows; skills and commands
- GitHub Copilot cloud agent: disabled
- Repository governance: Single-maintainer GitFlow policy 6; local handoff
generated, live activation deferred

Deferred advisory checks
────────────────────────
- GitHub Copilot authentication: Liftoff does not automate or persist Copilot
credentials. Remedy: Run \`copilot\` and sign in if prompted.

Deferred project dependencies
─────────────────────────────
- Download backend Go modules: cd "<workspace>/snapshot-app/backend" && go mod
download

✓ Initialized snapshot-app: <workspace>/snapshot-app
Completion
──────────
Target                 <workspace>/snapshot-app
Spec workflow          OpenSpec
Coding agents          GitHub Copilot
Repository governance  Deterministic setup generated; run /liftoff-setup next

Next recommended command
────────────────────────
$ /liftoff-setup

",
}
`;

exports[`complete onboarding screens > snapshots the compact migration provenance and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "╻  ╻┏━╸╺┳╸┏━┓┏━╸┏━╸
┃  ┃┣╸  ┃ ┃ ┃┣╸ ┣╸
┗━╸╹╹   ╹ ┗━┛╹  ╹
Migrate an existing application into a fresh Liftoff project
◆: Scan legacy project
<workspace>/legacy-node
Scan defaults (override in prompts or with flags)
─────────────────────────────────────────────────
Decision     Detected value  Evidence
───────────  ──────────────  ───────────────────────
projectName  legacy-node     source directory name
projectType  standard        fastify in package.json
apiStack     node-fastify    fastify in package.json

◆: Review migration plan
Resolved migration plan
───────────────────────
Project                   legacy-node
Project type              Standard application
API stack                 Node.js / Fastify / TypeScript
Cloud                     Azure
Region                    East US / eastus
Frontend                  Not generated
Spec workflow             OpenSpec
Coding agents             GitHub Copilot
OpenSpec workflows        12 workflows; skills and commands
Copilot cloud agent       Disabled (default)
Repository governance     Single-maintainer GitFlow policy 6
Governance handoff Local handoff generated; live enforcement is not active
Governance setup integrations  .github/prompts/liftoff-setup.prompt.md
Governance activation Deferred until commit, push, read-only Phase 0, and
explicit plan approval
Environments              dev, staging, prod
Approved stack Fastify, TypeScript, Drizzle, Vitest, Scalar, PostgreSQL, Redis,
Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker
Compose, OpenTofu
Local development Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure            OpenTofu for Azure

◆: Resolve fresh migration target
◆: Check workstation readiness
Workstation readiness
─────────────────────
Requirement     Level     State  Detail
──────────────  ────────  ─────  ───────────────
Node.js         blocking  ready  Version 24.20.0
Docker          advisory  ready  Version 27.0.0
OpenTofu        advisory  ready  Version 1.12.6
Azure CLI       advisory  ready  Version 2.70.0
OpenSpec        blocking  ready  Version 1.11.0
GitHub Copilot  blocking  ready  Version 1.0.0

◆: Check OpenSpec global profile
✓ OpenSpec global profile: custom; both; 12 workflows
◆: Stage fresh migration project
◆: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
◆: Copy filtered legacy source
<workspace>/legacy-node
◆: Validate staged migration
◆: Merge fresh migration target
<workspace>/legacy-node-liftoff
Configured integrations
───────────────────────
- OpenSpec 1.11.0
- GitHub Copilot
- OpenSpec global profile: verified; 12 workflows; skills and commands
- GitHub Copilot cloud agent: disabled

Deferred advisory checks
────────────────────────
- GitHub Copilot authentication: Liftoff does not automate or persist Copilot
credentials. Remedy: Run \`copilot\` and sign in if prompted.

Deferred project dependencies
─────────────────────────────
- Install backend Node.js dependencies: cd
"<workspace>/legacy-node-liftoff/backend" && npm ci

Next steps
──────────
- Optional - preserve history: copy the .git directory from
<workspace>/legacy-node into <workspace>/legacy-node-liftoff, then commit the
migration on top (git rename detection preserves file history).
- Execute the migration plan: openspec/changes/migrate-to-liftoff/ (run it with
your agent workflow, e.g. /opsx:apply migrate-to-liftoff)
- Verify compliance: liftoff validate && liftoff doctor

✓ Migrated legacy-node: <workspace>/legacy-node-liftoff
Completion
──────────
Target    <workspace>/legacy-node-liftoff
Source    <workspace>/legacy-node (not modified)
Rollback  Delete <workspace>/legacy-node-liftoff

Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`complete onboarding screens > snapshots the compact plan screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "╻  ╻┏━╸╺┳╸┏━┓┏━╸┏━╸
┃  ┃┣╸  ┃ ┃ ┃┣╸ ┣╸
┗━╸╹╹   ╹ ┗━┛╹  ╹
Preview project decisions, artifacts, and workstation requirements
Project decisions
─────────────────
Project                   liftoff-preview
Project type              Standard application
API stack                 Go / Huma / Chi
Cloud                     Azure
Region                    East US / eastus
Frontend                  Not generated
Spec workflow             OpenSpec
Coding agents             GitHub Copilot
OpenSpec workflows        12 workflows; skills and commands
Copilot cloud agent       Disabled (default)
Repository governance     Single-maintainer GitFlow policy 6
Governance handoff Local handoff generated; live enforcement is not active
Governance setup integrations  .github/prompts/liftoff-setup.prompt.md
Governance activation Deferred until commit, push, read-only Phase 0, and
explicit plan approval
Environments              dev
Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis,
Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker
Compose, OpenTofu
Local development Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure            OpenTofu for Azure

Artifacts (43)
──────────────
Artifact                   Lifecycle                  Path
─────────────────────────  ─────────────────────────  ──────────────────────────
root-readme                project (base)             README.md
root-gitignore             project (base)             .gitignore
liftoff-config             desired-state              liftoff.config.json
env-example                project (base)             .env.example
backend-dockerfile         project (base)             Dockerfile
go-backend-module          project (base)             backend/go.mod
go-backend-checksums       project (base)             backend/go.sum
go-backend-makefile        project (base)             backend/Makefile
go-backend-main            project (base)             backend/cmd/api/main.go
go-backend-api             project (base)             backend/internal/api/api.g
                                                      o
go-backend-config          project (base)             backend/internal/config/co
                                                      nfig.go
go-backend-database        project (base)             backend/internal/database/
                                                      database.go
go-backend-test-health     project (base)             backend/internal/api/api_t
                                                      est.go
database-go-migration      project (base)             database/migrations/0001_i
                                                      nitial.sql
database-schema            project (base)             database/models/schema.sql
environment-dev-backend    project (environment:dev)  environments/dev/backend.e
                                                      nv
docker-compose             project (base)             docker-compose.yml
opentofu-versions          project (base)             infrastructure/opentofu/az
                                                      ure/versions.tf
opentofu-provider-lock     project (base)             infrastructure/opentofu/az
                                                      ure/.terraform.lock.hcl
opentofu-providers         project (base)             infrastructure/opentofu/az
                                                      ure/providers.tf
opentofu-variables         project (base)             infrastructure/opentofu/az
                                                      ure/variables.tf
opentofu-main              project (base)             infrastructure/opentofu/az
                                                      ure/main.tf
opentofu-outputs           project (base)             infrastructure/opentofu/az
                                                      ure/outputs.tf
opentofu-local-state       project (base)             infrastructure/opentofu/az
                                                      ure/backend.local.tf
opentofu-remote-state-exa  project (base)             infrastructure/opentofu/az
mple                                                  ure/backend.remote.example
                                                      .tf
opentofu-readme            project (base)             infrastructure/opentofu/az
                                                      ure/README.md
opentofu-dev-tfvars        project (environment:dev)  infrastructure/opentofu/az
                                                      ure/environments/dev.tfvar
                                                      s
openspec-config            seed                       openspec/config.yaml
openspec-seed-change-meta  seed                       openspec/changes/bootstrap
data                                                  -liftoff-preview/.openspec
                                                      .yaml
openspec-seed-proposal     seed                       openspec/changes/bootstrap
                                                      -liftoff-preview/proposal.
                                                      md
openspec-seed-design       seed                       openspec/changes/bootstrap
                                                      -liftoff-preview/design.md
openspec-seed-tasks        seed                       openspec/changes/bootstrap
                                                      -liftoff-preview/tasks.md
openspec-seed-spec         seed                       openspec/changes/bootstrap
                                                      -liftoff-preview/specs/go-
                                                      huma-application-baseline/
                                                      spec.md
openspec-spec-placeholder  seed                       openspec/specs/.gitkeep
repository-governance-pol  managed-core               .liftoff/governance/policy
icy                                                   .md
repository-governance-con  managed-core               .liftoff/governance/contex
text                                                  t.json
repository-governance-gui  managed-core               .liftoff/governance/README
de                                                    .md
repository-governance-pha  managed-core               .liftoff/governance/phase-
se-graph                                              graph.json
repository-governance-com  managed-core               .liftoff/governance/compat
patibility                                            ibility.json
repository-governance-cre  managed-core               .liftoff/governance/creden
dential-policy-schema                                 tial-policy.schema.json
liftoff-setup-copilot      managed-core               .github/prompts/liftoff-se
                                                      tup.prompt.md
repository-governance-cop  managed-core               .github/prompts/liftoff-re
ilot-launcher                                         pository-governance.prompt
                                                      .md
manifest                   manifest                   liftoff.manifest.json

Workstation requirements
────────────────────────
Requirement     Version         Level
──────────────  ──────────────  ────────
Node.js         24.20.0+        blocking
Go              1.27.0+         blocking
Docker          available       advisory
OpenTofu        1.12.6+         advisory
Azure CLI       available       advisory
OpenSpec        exactly 1.11.0  blocking
GitHub Copilot  available       blocking

",
}
`;

exports[`complete onboarding screens > snapshots the plain conflict consent and cancellation screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Liftoff - Initialize the project and prepare its workstation

Stage: Discover project context
Stage: Configure project
? Generate the single-maintainer GitFlow governance handoff? [Y/n]: ? Set up the GitHub-hosted Copilot coding agent? This writes .github/workflows/copilot-setup-steps.yml and .github/agents/openspec.agent.md. [y/N]: Stage: Review resolved plan
Resolved project plan
Project: snapshot-app
Project type: Standard application
API stack: Go / Huma / Chi
Cloud: Azure
Region: East US / eastus
Frontend: Not generated
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
OpenSpec workflows: 12 workflows; skills and commands
Copilot cloud agent: Disabled (default)
Repository governance: Single-maintainer GitFlow policy 6
Governance handoff: Local handoff generated; live enforcement is not active
Governance setup integrations: .github/prompts/liftoff-setup.prompt.md
Governance activation: Deferred until commit, push, read-only Phase 0, and explicit plan approval
Environments: dev
Approved stack: Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu
Local development: Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure: OpenTofu for Azure

? Initialize project? [Y/n]: [info] Cancelled: Initialization stopped; no destination files were changed.
",
}
`;

exports[`complete onboarding screens > snapshots the plain handled readiness failure screen 1`] = `
{
  "code": 1,
  "err": "[error] Error: OpenSpec: command not found
Remedy: npm install -g @fission-ai/openspec@1.11.0
[error] Error: Workstation readiness is incomplete.
Remedy: Resume with \`liftoff init --install-tools\` plus the same project options after reviewing the commands.
",
  "out": "Liftoff - Initialize the project and prepare its workstation

Stage: Discover project context
Stage: Review resolved plan
Resolved project plan
Project: snapshot-app
Project type: Standard application
API stack: Go / Huma / Chi
Cloud: Azure
Region: East US / eastus
Frontend: Not generated
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
OpenSpec workflows: 12 workflows; skills and commands
Copilot cloud agent: Disabled (default)
Repository governance: Single-maintainer GitFlow policy 6
Governance handoff: Local handoff generated; live enforcement is not active
Governance setup integrations: .github/prompts/liftoff-setup.prompt.md
Governance activation: Deferred until commit, push, read-only Phase 0, and explicit plan approval
Environments: dev
Approved stack: Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu
Local development: Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure: OpenTofu for Azure

Stage: Resolve destination
Stage: Check workstation readiness
Workstation readiness
Requirement: Node.js | Level: blocking | State: ready | Detail: Version 24.20.0
Requirement: Go | Level: blocking | State: ready | Detail: Version 1.27.0
Requirement: Docker | Level: advisory | State: ready | Detail: Version 27.0.0
Requirement: OpenTofu | Level: advisory | State: ready | Detail: Version 1.12.6
Requirement: Azure CLI | Level: advisory | State: ready | Detail: Version 2.70.0
Requirement: OpenSpec | Level: blocking | State: missing | Detail: command not found
Requirement: GitHub Copilot | Level: blocking | State: ready | Detail: Version 1.0.0

",
}
`;

exports[`complete onboarding screens > snapshots the plain init readiness and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Liftoff - Initialize the project and prepare its workstation

Stage: Discover project context
Stage: Review resolved plan
Resolved project plan
Project: snapshot-app
Project type: Standard application
API stack: Go / Huma / Chi
Cloud: Azure
Region: East US / eastus
Frontend: Not generated
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
OpenSpec workflows: 12 workflows; skills and commands
Copilot cloud agent: Disabled (default)
Repository governance: Single-maintainer GitFlow policy 6
Governance handoff: Local handoff generated; live enforcement is not active
Governance setup integrations: .github/prompts/liftoff-setup.prompt.md
Governance activation: Deferred until commit, push, read-only Phase 0, and explicit plan approval
Environments: dev
Approved stack: Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu
Local development: Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure: OpenTofu for Azure

Stage: Resolve destination
Stage: Check workstation readiness
Workstation readiness
Requirement: Node.js | Level: blocking | State: ready | Detail: Version 24.20.0
Requirement: Go | Level: blocking | State: ready | Detail: Version 1.27.0
Requirement: Docker | Level: advisory | State: ready | Detail: Version 27.0.0
Requirement: OpenTofu | Level: advisory | State: ready | Detail: Version 1.12.6
Requirement: Azure CLI | Level: advisory | State: ready | Detail: Version 2.70.0
Requirement: OpenSpec | Level: blocking | State: ready | Detail: Version 1.11.0
Requirement: GitHub Copilot | Level: blocking | State: ready | Detail: Version 1.0.0

Stage: Check OpenSpec global profile
[ok] OpenSpec global profile: custom; both; 12 workflows
Stage: Stage project files
Stage: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
Stage: Validate staged project
Stage: Merge staged project
<workspace>/snapshot-app
Configured integrations
- OpenSpec 1.11.0
- GitHub Copilot
- OpenSpec global profile: verified; 12 workflows; skills and commands
- GitHub Copilot cloud agent: disabled
- Repository governance: Single-maintainer GitFlow policy 6; local handoff generated, live activation deferred

Deferred advisory checks
- GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. Remedy: Run \`copilot\` and sign in if prompted.

Deferred project dependencies
- Download backend Go modules: cd "<workspace>/snapshot-app/backend" && go mod download

[ok] Initialized snapshot-app: <workspace>/snapshot-app
Completion
Target: <workspace>/snapshot-app
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
Repository governance: Deterministic setup generated; run /liftoff-setup next

Next recommended command
$ /liftoff-setup

",
}
`;

exports[`complete onboarding screens > snapshots the plain migration provenance and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Liftoff - Migrate an existing application into a fresh Liftoff project

Stage: Scan legacy project
<workspace>/legacy-node
Scan defaults (override in prompts or with flags)
projectName: legacy-node  (detected: source directory name)
projectType: standard  (detected: fastify in package.json)
apiStack: node-fastify  (detected: fastify in package.json)

Stage: Review migration plan
Resolved migration plan
Project: legacy-node
Project type: Standard application
API stack: Node.js / Fastify / TypeScript
Cloud: Azure
Region: East US / eastus
Frontend: Not generated
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
OpenSpec workflows: 12 workflows; skills and commands
Copilot cloud agent: Disabled (default)
Repository governance: Single-maintainer GitFlow policy 6
Governance handoff: Local handoff generated; live enforcement is not active
Governance setup integrations: .github/prompts/liftoff-setup.prompt.md
Governance activation: Deferred until commit, push, read-only Phase 0, and explicit plan approval
Environments: dev, staging, prod
Approved stack: Fastify, TypeScript, Drizzle, Vitest, Scalar, PostgreSQL, Redis, Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu
Local development: Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure: OpenTofu for Azure

Stage: Resolve fresh migration target
Stage: Check workstation readiness
Workstation readiness
Requirement: Node.js | Level: blocking | State: ready | Detail: Version 24.20.0
Requirement: Docker | Level: advisory | State: ready | Detail: Version 27.0.0
Requirement: OpenTofu | Level: advisory | State: ready | Detail: Version 1.12.6
Requirement: Azure CLI | Level: advisory | State: ready | Detail: Version 2.70.0
Requirement: OpenSpec | Level: blocking | State: ready | Detail: Version 1.11.0
Requirement: GitHub Copilot | Level: blocking | State: ready | Detail: Version 1.0.0

Stage: Check OpenSpec global profile
[ok] OpenSpec global profile: custom; both; 12 workflows
Stage: Stage fresh migration project
Stage: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
Stage: Copy filtered legacy source
<workspace>/legacy-node
Stage: Validate staged migration
Stage: Merge fresh migration target
<workspace>/legacy-node-liftoff
Configured integrations
- OpenSpec 1.11.0
- GitHub Copilot
- OpenSpec global profile: verified; 12 workflows; skills and commands
- GitHub Copilot cloud agent: disabled

Deferred advisory checks
- GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. Remedy: Run \`copilot\` and sign in if prompted.

Deferred project dependencies
- Install backend Node.js dependencies: cd "<workspace>/legacy-node-liftoff/backend" && npm ci

Next steps
- Optional - preserve history: copy the .git directory from <workspace>/legacy-node into <workspace>/legacy-node-liftoff, then commit the migration on top (git rename detection preserves file history).
- Execute the migration plan: openspec/changes/migrate-to-liftoff/ (run it with your agent workflow, e.g. /opsx:apply migrate-to-liftoff)
- Verify compliance: liftoff validate && liftoff doctor

[ok] Migrated legacy-node: <workspace>/legacy-node-liftoff
Completion
Target: <workspace>/legacy-node-liftoff
Source: <workspace>/legacy-node (not modified)
Rollback: Delete <workspace>/legacy-node-liftoff

Next recommended command
$ liftoff validate && liftoff doctor

",
}
`;

exports[`complete onboarding screens > snapshots the plain plan screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "Liftoff - Preview project decisions, artifacts, and workstation requirements

Project decisions
Project: liftoff-preview
Project type: Standard application
API stack: Go / Huma / Chi
Cloud: Azure
Region: East US / eastus
Frontend: Not generated
Spec workflow: OpenSpec
Coding agents: GitHub Copilot
OpenSpec workflows: 12 workflows; skills and commands
Copilot cloud agent: Disabled (default)
Repository governance: Single-maintainer GitFlow policy 6
Governance handoff: Local handoff generated; live enforcement is not active
Governance setup integrations: .github/prompts/liftoff-setup.prompt.md
Governance activation: Deferred until commit, push, read-only Phase 0, and explicit plan approval
Environments: dev
Approved stack: Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu
Local development: Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit
Infrastructure: OpenTofu for Azure

Artifacts (43)
Artifact: root-readme | Lifecycle: project (base) | Path: README.md
Artifact: root-gitignore | Lifecycle: project (base) | Path: .gitignore
Artifact: liftoff-config | Lifecycle: desired-state | Path: liftoff.config.json
Artifact: env-example | Lifecycle: project (base) | Path: .env.example
Artifact: backend-dockerfile | Lifecycle: project (base) | Path: Dockerfile
Artifact: go-backend-module | Lifecycle: project (base) | Path: backend/go.mod
Artifact: go-backend-checksums | Lifecycle: project (base) | Path: backend/go.sum
Artifact: go-backend-makefile | Lifecycle: project (base) | Path: backend/Makefile
Artifact: go-backend-main | Lifecycle: project (base) | Path: backend/cmd/api/main.go
Artifact: go-backend-api | Lifecycle: project (base) | Path: backend/internal/api/api.go
Artifact: go-backend-config | Lifecycle: project (base) | Path: backend/internal/config/config.go
Artifact: go-backend-database | Lifecycle: project (base) | Path: backend/internal/database/database.go
Artifact: go-backend-test-health | Lifecycle: project (base) | Path: backend/internal/api/api_test.go
Artifact: database-go-migration | Lifecycle: project (base) | Path: database/migrations/0001_initial.sql
Artifact: database-schema | Lifecycle: project (base) | Path: database/models/schema.sql
Artifact: environment-dev-backend | Lifecycle: project (environment:dev) | Path: environments/dev/backend.env
Artifact: docker-compose | Lifecycle: project (base) | Path: docker-compose.yml
Artifact: opentofu-versions | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/versions.tf
Artifact: opentofu-provider-lock | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/.terraform.lock.hcl
Artifact: opentofu-providers | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/providers.tf
Artifact: opentofu-variables | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/variables.tf
Artifact: opentofu-main | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/main.tf
Artifact: opentofu-outputs | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/outputs.tf
Artifact: opentofu-local-state | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/backend.local.tf
Artifact: opentofu-remote-state-example | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/backend.remote.example.tf
Artifact: opentofu-readme | Lifecycle: project (base) | Path: infrastructure/opentofu/azure/README.md
Artifact: opentofu-dev-tfvars | Lifecycle: project (environment:dev) | Path: infrastructure/opentofu/azure/environments/dev.tfvars
Artifact: openspec-config | Lifecycle: seed | Path: openspec/config.yaml
Artifact: openspec-seed-change-metadata | Lifecycle: seed | Path: openspec/changes/bootstrap-liftoff-preview/.openspec.yaml
Artifact: openspec-seed-proposal | Lifecycle: seed | Path: openspec/changes/bootstrap-liftoff-preview/proposal.md
Artifact: openspec-seed-design | Lifecycle: seed | Path: openspec/changes/bootstrap-liftoff-preview/design.md
Artifact: openspec-seed-tasks | Lifecycle: seed | Path: openspec/changes/bootstrap-liftoff-preview/tasks.md
Artifact: openspec-seed-spec | Lifecycle: seed | Path: openspec/changes/bootstrap-liftoff-preview/specs/go-huma-application-baseline/spec.md
Artifact: openspec-spec-placeholder | Lifecycle: seed | Path: openspec/specs/.gitkeep
Artifact: repository-governance-policy | Lifecycle: managed-core | Path: .liftoff/governance/policy.md
Artifact: repository-governance-context | Lifecycle: managed-core | Path: .liftoff/governance/context.json
Artifact: repository-governance-guide | Lifecycle: managed-core | Path: .liftoff/governance/README.md
Artifact: repository-governance-phase-graph | Lifecycle: managed-core | Path: .liftoff/governance/phase-graph.json
Artifact: repository-governance-compatibility | Lifecycle: managed-core | Path: .liftoff/governance/compatibility.json
Artifact: repository-governance-credential-policy-schema | Lifecycle: managed-core | Path: .liftoff/governance/credential-policy.schema.json
Artifact: liftoff-setup-copilot | Lifecycle: managed-core | Path: .github/prompts/liftoff-setup.prompt.md
Artifact: repository-governance-copilot-launcher | Lifecycle: managed-core | Path: .github/prompts/liftoff-repository-governance.prompt.md
Artifact: manifest | Lifecycle: manifest | Path: liftoff.manifest.json

Workstation requirements
Node.js: 24.20.0+ [blocking]
Go: 1.27.0+ [blocking]
Docker: available [advisory]
OpenTofu: 1.12.6+ [advisory]
Azure CLI: available [advisory]
OpenSpec: exactly 1.11.0 [blocking]
GitHub Copilot: available [blocking]

",
}
`;

exports[`complete onboarding screens > snapshots the rich conflict consent and cancellation screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌──────────────────────────────────────────────────────────────────────────────────────────────┐
│ ██╗     ██╗███████╗████████╗ ██████╗ ███████╗███████╗                                        │
│ ██║     ██║██╔════╝╚══██╔══╝██╔═══██╗██╔════╝██╔════╝                                        │
│ ██║     ██║█████╗     ██║   ██║   ██║█████╗  █████╗                                          │
│ ██║     ██║██╔══╝     ██║   ██║   ██║██╔══╝  ██╔══╝                                          │
│ ███████╗██║██║        ██║   ╚██████╔╝██║     ██║                                             │
│ ╚══════╝╚═╝╚═╝        ╚═╝    ╚═════╝ ╚═╝     ╚═╝                                             │
│                                                                                              │
│ Initialize the project and prepare its workstation                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Discover project context
◆: Configure project
? Generate the single-maintainer GitFlow governance handoff? [Y/n]: ? Set up the GitHub-hosted Copilot coding agent? This writes .github/workflows/copilot-setup-steps.yml and .github/agents/openspec.agent.md. [y/N]: ◆: Review resolved plan
┌─ Resolved project plan ──────────────────────────────────────────────────────────────────────┐
│ Project                   snapshot-app                                                       │
│ Project type              Standard application                                               │
│ API stack                 Go / Huma / Chi                                                    │
│ Cloud                     Azure                                                              │
│ Region                    East US / eastus                                                   │
│ Frontend                  Not generated                                                      │
│ Spec workflow             OpenSpec                                                           │
│ Coding agents             GitHub Copilot                                                     │
│ OpenSpec workflows        12 workflows; skills and commands                                  │
│ Copilot cloud agent       Disabled (default)                                                 │
│ Repository governance     Single-maintainer GitFlow policy 6                                 │
│ Governance handoff        Local handoff generated; live enforcement is not active            │
│ Governance setup integrations  .github/prompts/liftoff-setup.prompt.md                       │
│ Governance activation Deferred until commit, push, read-only Phase 0, and explicit plan      │
│ approval                                                                                     │
│ Environments              dev                                                                │
│ Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service   │
│ Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu              │
│ Local development         Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit        │
│ Infrastructure            OpenTofu for Azure                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
? Initialize project? [Y/n]: i Cancelled: Initialization stopped; no destination files were changed.
",
}
`;

exports[`complete onboarding screens > snapshots the rich handled readiness failure screen 1`] = `
{
  "code": 1,
  "err": "┌─ Error ──────────────────────────────────────────────────────────────────────────────────────┐
│ OpenSpec: command not found                                                                  │
│ Remedy: npm install -g @fission-ai/openspec@1.11.0                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Error ──────────────────────────────────────────────────────────────────────────────────────┐
│ Workstation readiness is incomplete.                                                         │
│ Remedy: Resume with \`liftoff init --install-tools\` plus the same project options after       │
│ reviewing the commands.                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
",
  "out": "┌──────────────────────────────────────────────────────────────────────────────────────────────┐
│ ██╗     ██╗███████╗████████╗ ██████╗ ███████╗███████╗                                        │
│ ██║     ██║██╔════╝╚══██╔══╝██╔═══██╗██╔════╝██╔════╝                                        │
│ ██║     ██║█████╗     ██║   ██║   ██║█████╗  █████╗                                          │
│ ██║     ██║██╔══╝     ██║   ██║   ██║██╔══╝  ██╔══╝                                          │
│ ███████╗██║██║        ██║   ╚██████╔╝██║     ██║                                             │
│ ╚══════╝╚═╝╚═╝        ╚═╝    ╚═════╝ ╚═╝     ╚═╝                                             │
│                                                                                              │
│ Initialize the project and prepare its workstation                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Discover project context
◆: Review resolved plan
┌─ Resolved project plan ──────────────────────────────────────────────────────────────────────┐
│ Project                   snapshot-app                                                       │
│ Project type              Standard application                                               │
│ API stack                 Go / Huma / Chi                                                    │
│ Cloud                     Azure                                                              │
│ Region                    East US / eastus                                                   │
│ Frontend                  Not generated                                                      │
│ Spec workflow             OpenSpec                                                           │
│ Coding agents             GitHub Copilot                                                     │
│ OpenSpec workflows        12 workflows; skills and commands                                  │
│ Copilot cloud agent       Disabled (default)                                                 │
│ Repository governance     Single-maintainer GitFlow policy 6                                 │
│ Governance handoff        Local handoff generated; live enforcement is not active            │
│ Governance setup integrations  .github/prompts/liftoff-setup.prompt.md                       │
│ Governance activation Deferred until commit, push, read-only Phase 0, and explicit plan      │
│ approval                                                                                     │
│ Environments              dev                                                                │
│ Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service   │
│ Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu              │
│ Local development         Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit        │
│ Infrastructure            OpenTofu for Azure                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Resolve destination
◆: Check workstation readiness
┌─ Workstation readiness ──────────────────────────────────────────────────────────────────────┐
│ Requirement     Level     State    Detail                                                    │
│ ──────────────  ────────  ───────  ─────────────────                                         │
│ Node.js         blocking  ready    Version 24.20.0                                           │
│ Go              blocking  ready    Version 1.27.0                                            │
│ Docker          advisory  ready    Version 27.0.0                                            │
│ OpenTofu        advisory  ready    Version 1.12.6                                            │
│ Azure CLI       advisory  ready    Version 2.70.0                                            │
│ OpenSpec        blocking  missing  command not found                                         │
│ GitHub Copilot  blocking  ready    Version 1.0.0                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
",
}
`;

exports[`complete onboarding screens > snapshots the rich init readiness and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌──────────────────────────────────────────────────────────────────────────────────────────────┐
│ ██╗     ██╗███████╗████████╗ ██████╗ ███████╗███████╗                                        │
│ ██║     ██║██╔════╝╚══██╔══╝██╔═══██╗██╔════╝██╔════╝                                        │
│ ██║     ██║█████╗     ██║   ██║   ██║█████╗  █████╗                                          │
│ ██║     ██║██╔══╝     ██║   ██║   ██║██╔══╝  ██╔══╝                                          │
│ ███████╗██║██║        ██║   ╚██████╔╝██║     ██║                                             │
│ ╚══════╝╚═╝╚═╝        ╚═╝    ╚═════╝ ╚═╝     ╚═╝                                             │
│                                                                                              │
│ Initialize the project and prepare its workstation                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Discover project context
◆: Review resolved plan
┌─ Resolved project plan ──────────────────────────────────────────────────────────────────────┐
│ Project                   snapshot-app                                                       │
│ Project type              Standard application                                               │
│ API stack                 Go / Huma / Chi                                                    │
│ Cloud                     Azure                                                              │
│ Region                    East US / eastus                                                   │
│ Frontend                  Not generated                                                      │
│ Spec workflow             OpenSpec                                                           │
│ Coding agents             GitHub Copilot                                                     │
│ OpenSpec workflows        12 workflows; skills and commands                                  │
│ Copilot cloud agent       Disabled (default)                                                 │
│ Repository governance     Single-maintainer GitFlow policy 6                                 │
│ Governance handoff        Local handoff generated; live enforcement is not active            │
│ Governance setup integrations  .github/prompts/liftoff-setup.prompt.md                       │
│ Governance activation Deferred until commit, push, read-only Phase 0, and explicit plan      │
│ approval                                                                                     │
│ Environments              dev                                                                │
│ Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service   │
│ Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu              │
│ Local development         Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit        │
│ Infrastructure            OpenTofu for Azure                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Resolve destination
◆: Check workstation readiness
┌─ Workstation readiness ──────────────────────────────────────────────────────────────────────┐
│ Requirement     Level     State  Detail                                                      │
│ ──────────────  ────────  ─────  ───────────────                                             │
│ Node.js         blocking  ready  Version 24.20.0                                             │
│ Go              blocking  ready  Version 1.27.0                                              │
│ Docker          advisory  ready  Version 27.0.0                                              │
│ OpenTofu        advisory  ready  Version 1.12.6                                              │
│ Azure CLI       advisory  ready  Version 2.70.0                                              │
│ OpenSpec        blocking  ready  Version 1.11.0                                              │
│ GitHub Copilot  blocking  ready  Version 1.0.0                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Check OpenSpec global profile
✓ OpenSpec global profile: custom; both; 12 workflows
◆: Stage project files
◆: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
◆: Validate staged project
◆: Merge staged project
<workspace>/snapshot-app
┌─ Configured integrations ────────────────────────────────────────────────────────────────────┐
│ • OpenSpec 1.11.0                                                                            │
│ • GitHub Copilot                                                                             │
│ • OpenSpec global profile: verified; 12 workflows; skills and commands                       │
│ • GitHub Copilot cloud agent: disabled                                                       │
│ • Repository governance: Single-maintainer GitFlow policy 6; local handoff generated, live   │
│ activation deferred                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Deferred advisory checks ───────────────────────────────────────────────────────────────────┐
│ • GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials.   │
│ Remedy: Run \`copilot\` and sign in if prompted.                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Deferred project dependencies ──────────────────────────────────────────────────────────────┐
│ • Download backend Go modules: cd "<workspace>/snapshot-app/backend" && go mod download      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Initialized snapshot-app: <workspace>/snapshot-app
┌─ Completion ─────────────────────────────────────────────────────────────────────────────────┐
│ Target                 <workspace>/snapshot-app                                              │
│ Spec workflow          OpenSpec                                                              │
│ Coding agents          GitHub Copilot                                                        │
│ Repository governance  Deterministic setup generated; run /liftoff-setup next                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
Next recommended command
────────────────────────
$ /liftoff-setup

",
}
`;

exports[`complete onboarding screens > snapshots the rich migration provenance and completion screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌──────────────────────────────────────────────────────────────────────────────────────────────┐
│ ██╗     ██╗███████╗████████╗ ██████╗ ███████╗███████╗                                        │
│ ██║     ██║██╔════╝╚══██╔══╝██╔═══██╗██╔════╝██╔════╝                                        │
│ ██║     ██║█████╗     ██║   ██║   ██║█████╗  █████╗                                          │
│ ██║     ██║██╔══╝     ██║   ██║   ██║██╔══╝  ██╔══╝                                          │
│ ███████╗██║██║        ██║   ╚██████╔╝██║     ██║                                             │
│ ╚══════╝╚═╝╚═╝        ╚═╝    ╚═════╝ ╚═╝     ╚═╝                                             │
│                                                                                              │
│ Migrate an existing application into a fresh Liftoff project                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Scan legacy project
<workspace>/legacy-node
┌─ Scan defaults (override in prompts or with flags) ──────────────────────────────────────────┐
│ Decision     Detected value  Evidence                                                        │
│ ───────────  ──────────────  ───────────────────────                                         │
│ projectName  legacy-node     source directory name                                           │
│ projectType  standard        fastify in package.json                                         │
│ apiStack     node-fastify    fastify in package.json                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Review migration plan
┌─ Resolved migration plan ────────────────────────────────────────────────────────────────────┐
│ Project                   legacy-node                                                        │
│ Project type              Standard application                                               │
│ API stack                 Node.js / Fastify / TypeScript                                     │
│ Cloud                     Azure                                                              │
│ Region                    East US / eastus                                                   │
│ Frontend                  Not generated                                                      │
│ Spec workflow             OpenSpec                                                           │
│ Coding agents             GitHub Copilot                                                     │
│ OpenSpec workflows        12 workflows; skills and commands                                  │
│ Copilot cloud agent       Disabled (default)                                                 │
│ Repository governance     Single-maintainer GitFlow policy 6                                 │
│ Governance handoff        Local handoff generated; live enforcement is not active            │
│ Governance setup integrations  .github/prompts/liftoff-setup.prompt.md                       │
│ Governance activation Deferred until commit, push, read-only Phase 0, and explicit plan      │
│ approval                                                                                     │
│ Environments              dev, staging, prod                                                 │
│ Approved stack Fastify, TypeScript, Drizzle, Vitest, Scalar, PostgreSQL, Redis, Azure        │
│ Service Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu      │
│ Local development         Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit        │
│ Infrastructure            OpenTofu for Azure                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Resolve fresh migration target
◆: Check workstation readiness
┌─ Workstation readiness ──────────────────────────────────────────────────────────────────────┐
│ Requirement     Level     State  Detail                                                      │
│ ──────────────  ────────  ─────  ───────────────                                             │
│ Node.js         blocking  ready  Version 24.20.0                                             │
│ Docker          advisory  ready  Version 27.0.0                                              │
│ OpenTofu        advisory  ready  Version 1.12.6                                              │
│ Azure CLI       advisory  ready  Version 2.70.0                                              │
│ OpenSpec        blocking  ready  Version 1.11.0                                              │
│ GitHub Copilot  blocking  ready  Version 1.0.0                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Check OpenSpec global profile
✓ OpenSpec global profile: custom; both; 12 workflows
◆: Stage fresh migration project
◆: Initialize spec-driven framework
OpenSpec 1.11.0
$ openspec init --tools github-copilot --profile custom --no-copilot-cloud
◆: Copy filtered legacy source
<workspace>/legacy-node
◆: Validate staged migration
◆: Merge fresh migration target
<workspace>/legacy-node-liftoff
┌─ Configured integrations ────────────────────────────────────────────────────────────────────┐
│ • OpenSpec 1.11.0                                                                            │
│ • GitHub Copilot                                                                             │
│ • OpenSpec global profile: verified; 12 workflows; skills and commands                       │
│ • GitHub Copilot cloud agent: disabled                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Deferred advisory checks ───────────────────────────────────────────────────────────────────┐
│ • GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials.   │
│ Remedy: Run \`copilot\` and sign in if prompted.                                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Deferred project dependencies ──────────────────────────────────────────────────────────────┐
│ • Install backend Node.js dependencies: cd "<workspace>/legacy-node-liftoff/backend" && npm  │
│ ci                                                                                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Next steps ─────────────────────────────────────────────────────────────────────────────────┐
│ • Optional - preserve history: copy the .git directory from <workspace>/legacy-node into     │
│ <workspace>/legacy-node-liftoff, then commit the migration on top (git rename detection      │
│ preserves file history).                                                                     │
│ • Execute the migration plan: openspec/changes/migrate-to-liftoff/ (run it with your agent   │
│ workflow, e.g. /opsx:apply migrate-to-liftoff)                                               │
│ • Verify compliance: liftoff validate && liftoff doctor                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Migrated legacy-node: <workspace>/legacy-node-liftoff
┌─ Completion ─────────────────────────────────────────────────────────────────────────────────┐
│ Target    <workspace>/legacy-node-liftoff                                                    │
│ Source    <workspace>/legacy-node (not modified)                                             │
│ Rollback  Delete <workspace>/legacy-node-liftoff                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`complete onboarding screens > snapshots the rich plan screen 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌──────────────────────────────────────────────────────────────────────────────────────────────┐
│ ██╗     ██╗███████╗████████╗ ██████╗ ███████╗███████╗                                        │
│ ██║     ██║██╔════╝╚══██╔══╝██╔═══██╗██╔════╝██╔════╝                                        │
│ ██║     ██║█████╗     ██║   ██║   ██║█████╗  █████╗                                          │
│ ██║     ██║██╔══╝     ██║   ██║   ██║██╔══╝  ██╔══╝                                          │
│ ███████╗██║██║        ██║   ╚██████╔╝██║     ██║                                             │
│ ╚══════╝╚═╝╚═╝        ╚═╝    ╚═════╝ ╚═╝     ╚═╝                                             │
│                                                                                              │
│ Preview project decisions, artifacts, and workstation requirements                           │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project decisions ──────────────────────────────────────────────────────────────────────────┐
│ Project                   liftoff-preview                                                    │
│ Project type              Standard application                                               │
│ API stack                 Go / Huma / Chi                                                    │
│ Cloud                     Azure                                                              │
│ Region                    East US / eastus                                                   │
│ Frontend                  Not generated                                                      │
│ Spec workflow             OpenSpec                                                           │
│ Coding agents             GitHub Copilot                                                     │
│ OpenSpec workflows        12 workflows; skills and commands                                  │
│ Copilot cloud agent       Disabled (default)                                                 │
│ Repository governance     Single-maintainer GitFlow policy 6                                 │
│ Governance handoff        Local handoff generated; live enforcement is not active            │
│ Governance setup integrations  .github/prompts/liftoff-setup.prompt.md                       │
│ Governance activation Deferred until commit, push, read-only Phase 0, and explicit plan      │
│ approval                                                                                     │
│ Environments              dev                                                                │
│ Approved stack Huma v2, Chi, pgx, Goose, go test, Scalar, PostgreSQL, Redis, Azure Service   │
│ Bus, Azure Blob Storage, Azure Communication Services, Docker Compose, OpenTofu              │
│ Local development         Docker Compose with PostgreSQL, Redis, Azurite, and Mailpit        │
│ Infrastructure            OpenTofu for Azure                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Artifacts (43) ─────────────────────────────────────────────────────────────────────────────┐
│ Artifact                         Lifecycle                  Path                             │
│ ───────────────────────────────  ─────────────────────────  ──────────────────────────────── │
│ root-readme                      project (base)             README.md                        │
│ root-gitignore                   project (base)             .gitignore                       │
│ liftoff-config                   desired-state              liftoff.config.json              │
│ env-example                      project (base)             .env.example                     │
│ backend-dockerfile               project (base)             Dockerfile                       │
│ go-backend-module                project (base)             backend/go.mod                   │
│ go-backend-checksums             project (base)             backend/go.sum                   │
│ go-backend-makefile              project (base)             backend/Makefile                 │
│ go-backend-main                  project (base)             backend/cmd/api/main.go          │
│ go-backend-api                   project (base)             backend/internal/api/api.go      │
│ go-backend-config                project (base)             backend/internal/config/config.g │
│                                                             o                                │
│ go-backend-database              project (base)             backend/internal/database/databa │
│                                                             se.go                            │
│ go-backend-test-health           project (base)             backend/internal/api/api_test.go │
│ database-go-migration            project (base)             database/migrations/0001_initial │
│                                                             .sql                             │
│ database-schema                  project (base)             database/models/schema.sql       │
│ environment-dev-backend          project (environment:dev)  environments/dev/backend.env     │
│ docker-compose                   project (base)             docker-compose.yml               │
│ opentofu-versions                project (base)             infrastructure/opentofu/azure/ve │
│                                                             rsions.tf                        │
│ opentofu-provider-lock           project (base)             infrastructure/opentofu/azure/.t │
│                                                             erraform.lock.hcl                │
│ opentofu-providers               project (base)             infrastructure/opentofu/azure/pr │
│                                                             oviders.tf                       │
│ opentofu-variables               project (base)             infrastructure/opentofu/azure/va │
│                                                             riables.tf                       │
│ opentofu-main                    project (base)             infrastructure/opentofu/azure/ma │
│                                                             in.tf                            │
│ opentofu-outputs                 project (base)             infrastructure/opentofu/azure/ou │
│                                                             tputs.tf                         │
│ opentofu-local-state             project (base)             infrastructure/opentofu/azure/ba │
│                                                             ckend.local.tf                   │
│ opentofu-remote-state-example    project (base)             infrastructure/opentofu/azure/ba │
│                                                             ckend.remote.example.tf          │
│ opentofu-readme                  project (base)             infrastructure/opentofu/azure/RE │
│                                                             ADME.md                          │
│ opentofu-dev-tfvars              project (environment:dev)  infrastructure/opentofu/azure/en │
│                                                             vironments/dev.tfvars            │
│ openspec-config                  seed                       openspec/config.yaml             │
│ openspec-seed-change-metadata    seed                       openspec/changes/bootstrap-lifto │
│                                                             ff-preview/.openspec.yaml        │
│ openspec-seed-proposal           seed                       openspec/changes/bootstrap-lifto │
│                                                             ff-preview/proposal.md           │
│ openspec-seed-design             seed                       openspec/changes/bootstrap-lifto │
│                                                             ff-preview/design.md             │
│ openspec-seed-tasks              seed                       openspec/changes/bootstrap-lifto │
│                                                             ff-preview/tasks.md              │
│ openspec-seed-spec               seed                       openspec/changes/bootstrap-lifto │
│                                                             ff-preview/specs/go-huma-applica │
│                                                             tion-baseline/spec.md            │
│ openspec-spec-placeholder        seed                       openspec/specs/.gitkeep          │
│ repository-governance-policy     managed-core               .liftoff/governance/policy.md    │
│ repository-governance-context    managed-core               .liftoff/governance/context.json │
│ repository-governance-guide      managed-core               .liftoff/governance/README.md    │
│ repository-governance-phase-gra  managed-core               .liftoff/governance/phase-graph. │
│ ph                                                          json                             │
│ repository-governance-compatibi  managed-core               .liftoff/governance/compatibilit │
│ lity                                                        y.json                           │
│ repository-governance-credentia  managed-core               .liftoff/governance/credential-p │
│ l-policy-schema                                             olicy.schema.json                │
│ liftoff-setup-copilot            managed-core               .github/prompts/liftoff-setup.pr │
│                                                             ompt.md                          │
│ repository-governance-copilot-l  managed-core               .github/prompts/liftoff-reposito │
│ auncher                                                     ry-governance.prompt.md          │
│ manifest                         manifest                   liftoff.manifest.json            │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Workstation requirements ───────────────────────────────────────────────────────────────────┐
│ Requirement     Version         Level                                                        │
│ ──────────────  ──────────────  ────────                                                     │
│ Node.js         24.20.0+        blocking                                                     │
│ Go              1.27.0+         blocking                                                     │
│ Docker          available       advisory                                                     │
│ OpenTofu        1.12.6+         advisory                                                     │
│ Azure CLI       available       advisory                                                     │
│ OpenSpec        exactly 1.11.0  blocking                                                     │
│ GitHub Copilot  available       blocking                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
",
}
`;
